--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,7 @@ a {
 
 .background-image {
     height: 40vh;
-    background-image: url(/images/banner.png);
+    background-image: url(../images/banner.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
